Fixed Return to Guide button on ios.

--- a/source/stylesheets/base/_base_styles.sass
+++ b/source/stylesheets/base/_base_styles.sass
@@ -4,6 +4,9 @@
 
 html
   font-size: #{$em-base}
+  height: 100%
+  width: 100%
+  position: fixed
 
 body
   font-size: 100%
